--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Will You Be My Valentine?</title>
+    <title>Quieres ser mi san valentin?</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,9 +11,9 @@
         <div class="gif_container">
             <img src="img1.gif" alt="Cute GIF">
         </div>
-        <h1>Will you be my Valentine?</h1>
+        <h1>Quieres ser mi san Valentin :D?</h1>
         <div class="buttons">
-            <button class="yes-button" onclick="handleYesClick()">Yes</button>
+            <button class="yes-button" onclick="handleYesClick()">Sip</button>
             <button class="no-button" onclick="handleNoClick()">No</button>
         </div>
         
