--- a/yes_page.html
+++ b/yes_page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="header_text">Knew you would say yes my Linys muakkkkk!</h1>
+        <h1 class="header_text">Sabia que dirias que si my Linys hermosa muakkkkk!</h1>
         <div class="gif_container">
             <img src="img3.gif">
         </div>
